<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.example.pdfrenderer.CustomOverlayView
            android:id="@+id/customOverlayView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_Overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/overlay_background"
        android:padding="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/searchResultCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_matches"
            android:textSize="18sp"
            android:textColor="#333333"/>

        <LinearLayout
            android:id="@+id/navigateToPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:visibility="gone"
            android:onClick="onTextClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_awesome_solid"
                android:text="@string/uf077"
                android:paddingVertical="3dp"
                android:paddingHorizontal="5dp"
                android:textSize="22sp"
                android:textColor="#333333" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigateToNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:visibility="gone"
            android:onClick="onTextClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_awesome_solid"
                android:text="@string/uf078"
                android:textSize="22sp"
                android:paddingVertical="3dp"
                android:paddingEnd="3dp"
                android:textColor="#333333"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#FFCCCCCC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/zoomOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_awesome_solid"
            android:layout_marginEnd="15dp"
            android:textSize="20sp"
            android:text="@string/uf010"/>

        <TextView
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_awesome_solid"
            android:text="@string/uf053"
            style="?android:attr/buttonBarButtonStyle" />


        <EditText
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="8dp"
            android:text="@string/one"
            android:backgroundTint="@android:color/black"
            android:textColor="#333333"
            android:autofillHints="" />


        <TextView
            android:id="@+id/totalPagesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#333333"/>

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_awesome_solid"
            android:text="@string/uf054"
            style="?android:attr/buttonBarButtonStyle" />

        <TextView
            android:id="@+id/zoomIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_awesome_solid"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:text="@string/uf00e"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

